# Rust-Application-for-screenshots-management

./: .gitignore  Cargo.toml  README.md
src/: data.rs  graphical_elements.rs  hashmap_hotkey.rs  hotkey_screen.rs  lib.rs  main.rs  ui_functions.rs
