[package]
name = "gui_image"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
druid="0.8.3"
screenshots = "0.7.1"
image="0.24.6"
mouse-rs = "0.4.2"
arboard="3.2.0"
imageproc="0.23.0"
native-dialog = "0.6.4"
rusttype = "0.9.3"